It fucking works now, good

--- a/levviatashardcoremode.csproj
+++ b/levviatashardcoremode.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\Events\" />
+    <Folder Include="Common\NPCs\" />
   </ItemGroup>
 </Project>
