--- a/levviatashardcoremode.csproj
+++ b/levviatashardcoremode.csproj
@@ -8,9 +8,23 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assets\UI\Font\0.png" />
+    <None Remove="Assets\UI\Font\1.png" />
+    <None Remove="Assets\UI\Font\2.png" />
+    <None Remove="Assets\UI\Font\3.png" />
+    <None Remove="Assets\UI\Font\4.png" />
+    <None Remove="Assets\UI\Font\5.png" />
+    <None Remove="Assets\UI\Font\6.png" />
+    <None Remove="Assets\UI\Font\7.png" />
+    <None Remove="Assets\UI\Font\8.png" />
+    <None Remove="Assets\UI\Font\9.png" />
+    <None Remove="Assets\UI\Font\Container\digitContainer.png" />
+    <None Remove="Assets\UI\Font\doubleDots.png" />
     <None Remove="Assets\UI\Marker1.png" />
     <None Remove="Assets\UI\Marker10.png" />
     <None Remove="Assets\UI\Marker11.png" />
+    <None Remove="Assets\UI\Marker12.png" />
+    <None Remove="Assets\UI\Marker13.png" />
     <None Remove="Assets\UI\Marker2.png" />
     <None Remove="Assets\UI\Marker3.png" />
     <None Remove="Assets\UI\Marker4.png" />
@@ -19,6 +33,13 @@
     <None Remove="Assets\UI\Marker7.png" />
     <None Remove="Assets\UI\Marker8.png" />
     <None Remove="Assets\UI\Marker9.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark1.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark2.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark3.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark4.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark5.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark6.png" />
+    <None Remove="Assets\UI\Markers\After\AfterMark7.png" />
     <None Remove="Assets\UI\PanelBorder.png" />
   </ItemGroup>
   <ItemGroup>
